--- a/.github/workflows/container-image.yml
+++ b/.github/workflows/container-image.yml
@@ -1,5 +1,5 @@
-name: build container -> kde-bootc
-run-name: building container -> kde-bootc
+name: build container -> niri-bootc
+run-name: building container -> niri-bootc
 on: 
   workflow_dispatch:
   #push:
@@ -15,4 +15,4 @@ jobs:
     - name: run podman build
       run: podman build -t niri-bootc --disable-compression=false .
     - name: push image to ghcr.io
-      run: podman push --creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} kde-bootc ghcr.io/sigulete/kde-bootc:latest
+      run: podman push --creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} niri-bootc ghcr.io/sigulete/niri-bootc:latest
