--- a/.github/workflows/container-image.yml
+++ b/.github/workflows/container-image.yml
@@ -2,7 +2,7 @@ name: build container -> niri-bootc
 run-name: building container -> niri-bootc
 on: 
   workflow_dispatch:
-  #push:
+  push:
   schedule:
   - cron: '30 13 * * FRI'    # Triggers Fri at 13:30
 
@@ -15,4 +15,4 @@ jobs:
     - name: run podman build
       run: podman build -t niri-bootc --disable-compression=false .
     - name: push image to ghcr.io
-      run: podman push --creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} niri-bootc ghcr.io/sigulete/niri-bootc:latest
+      run: podman push --creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} niri-bootc ghcr.io/LANWrench/niri-bootc:latest
