--- a/.github/workflows/container-image.yml
+++ b/.github/workflows/container-image.yml
@@ -15,4 +15,5 @@ jobs:
     - name: run podman build
       run: podman build -t niri-bootc --disable-compression=false .
     - name: push image to ghcr.io
-      run: podman push --creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} niri-bootc ghcr.io/LANWrench/niri-bootc:latest
+      run: podman tag niri-bootc ghcr.io/LANWrench/niri-bootc:latest
+      run: podman push --creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} ghcr.io/LANWrench/niri-bootc:latest
