tag image before push

--- a/.github/workflows/container-image.yml
+++ b/.github/workflows/container-image.yml
@@ -14,6 +14,7 @@ jobs:
     - uses: actions/checkout@v4
     - name: run podman build
       run: podman build -t niri-bootc --disable-compression=false .
-    - name: push image to ghcr.io
+    - name: tag image for ghcr.io
       run: podman tag niri-bootc ghcr.io/LANWrench/niri-bootc:latest
+    - name: push image to ghcr.io
       run: podman push --creds=${{ github.actor }}:${{ secrets.GITHUB_TOKEN }} ghcr.io/LANWrench/niri-bootc:latest
