add permissions block to github workflow file

--- a/.github/workflows/container-image.yml
+++ b/.github/workflows/container-image.yml
@@ -10,6 +10,9 @@ on:
 jobs:
   io-image:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     steps:
     - uses: actions/checkout@v4
     - name: run podman build
