--- a/.github/workflows/container-image.yml
+++ b/.github/workflows/container-image.yml
@@ -6,6 +6,13 @@ on:
   schedule:
   - cron: '30 13 * * FRI'    # Triggers Fri at 13:30
 
+env:
+  ARCH: x86_64
+  IMAGE_NAME: bootc-niri
+  IMAGE_REPO: ghcr.io/lanwrench
+  IMAGE_TAG: latest
+  VERSION: 1.0
+  VARIANT: 42
 
 jobs:
   io-image:
