added packages, changed variant to container

--- a/.github/workflows/container-image.yml
+++ b/.github/workflows/container-image.yml
@@ -12,7 +12,7 @@ env:
   IMAGE_REPO: ghcr.io/lanwrench
   IMAGE_TAG: latest
   VERSION: 42
-  VARIANT: 42
+  VARIANT: container
 
 jobs:
   io-image:
