--- a/.github/workflows/container-image.yml
+++ b/.github/workflows/container-image.yml
@@ -11,6 +11,7 @@ env:
   IMAGE_NAME: niri-bootc
   IMAGE_REPO: ghcr.io/lanwrench
   IMAGE_TAG: latest
+  IMAGE_SIGNED: false
   VERSION: 42
   VARIANT: container
 
@@ -38,6 +39,7 @@ jobs:
         version: ${{ env.VERSION }}
         variant: ${{ env.VARIANT }}
         iso_name: ${{ env.IMAGE_NAME }}-${{ env.IMAGE_TAG }}-${{ env.VERSION }}.iso
+        image_signed: ${{ env.IMAGE_SIGNED }}
 
     # This example is for uploading your ISO as a Github artifact. You can do something similar using any cloud storage, so long as you copy the output
     - name: Upload ISO as artifact
