Update to github workflow to create an iso with bootc-image-builder

--- a/.github/workflows/container-image.yml
+++ b/.github/workflows/container-image.yml
@@ -48,7 +48,8 @@ jobs:
             -v $(pwd)/output:/output \
             quay.io/centos-bootc/bootc-image-builder:latest \
             ghcr.io/lanwrench/niri-bootc:latest \
-            --type iso
+            --type iso \
+            --rootfs ext4
       
       - name: Check ISO was created
         run: |
